syntax = "proto3";
package x;
option go_package = "github.com/5vnetwork/vx-core/app/configs";

message PolicyConfig {
  map<uint32, UserPolicy> user_policy_map = 11;
  uint32 handshake_timeout = 1;
  // tcp
  uint32 connection_idle_timeout = 2;
  uint32 upLink_only_timeout = 4;
  uint32 downLink_only_timeout = 5;
  // udp
  uint32 udp_idle_timeout = 3;
  // inbound link stats
  bool link_stats = 7;
  // inbound stats
  bool inbound_stats = 8;
  bool user_stats = 9;
  bool outbound_stats = 10;
  // for debug purpose
  bool session_stats = 13;
  int32 default_buffer_size = 12;
}

message UserPolicy { int32 buffer_size = 1; }
